Ensure equal spacing of nav bar cells without overflow on small screens

--- a/northxproductions/Content/Site.css
+++ b/northxproductions/Content/Site.css
@@ -32,9 +32,13 @@
     text-align: center;
 }
 
+.navBarTable {
+    width: 100%;
+    max-width: 820px;
+}
+
 /* Nav bar links */
 .my-nav-bar-item-small {
-    padding: 0 40px;
     text-align: center;
     font-size: 1.5em;
 }
